# simple-logger

./: .gitmodules  CMakeLists.txt  create.bat
simple_logger/: simple_logger.cpp  simple_logger.h
tests/: main.cpp  main.h
